--- a/src/app/content/exp/exp.component.css
+++ b/src/app/content/exp/exp.component.css
@@ -22,7 +22,7 @@
   margin-bottom: 50px;
 }
 .box-exp:hover {
-  background: #919191;
+  background: #c7c7c7;
 }
 .box-text {
   padding: 40px 40px 40px;
