--- a/src/app/page/resume/resume.component.html
+++ b/src/app/page/resume/resume.component.html
@@ -1,79 +1,117 @@
 <app-navbar></app-navbar>
-<br>
-<br>
-<br>
-<br>
+<br />
+<br />
+<br />
+<br />
 <div class="container">
   <div class="row">
     <div class="col-md-4">
       <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-        <img src="../../../assets/image/me.jpg" class="card-img-top" >
+        <img src="../../../assets/image/me.jpg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">SANTICHAI YARASIT</h5>
-          
-            <p><i class="bi bi-braces"></i> Software Development</p>
-            <p><i class="bi bi-geo-fill"></i> Chachoengsao, TH</p>
-            <p><i class="bi bi-envelope-open"></i> santichai2959@gmail.com</p>
-            <p><i class="bi bi-phone"></i> 09-177-69353</p>
-       
-          <hr>
+
+          <p><i class="bi bi-braces"></i> Software Development</p>
+          <p><i class="bi bi-geo-fill"></i> Chachoengsao, TH</p>
+          <p><i class="bi bi-envelope-open"></i> santichai2959@gmail.com</p>
+          <p><i class="bi bi-phone"></i> 09-177-69353</p>
+
+          <hr />
           <h5 class="card-title">PERSONAL SKILLS</h5>
-          
-            <li>Good relationship</li>
-            <li>Continual improvement</li>
-            <li>Time management</li>
-            <li>Team work</li>
-            <li>Work under pressure</li>
-            <li>Positive attitude and open mind</li>
-         
-          <hr>
+
+          <li>Good relationship</li>
+          <li>Continual improvement</li>
+          <li>Time management</li>
+          <li>Team work</li>
+          <li>Work under pressure</li>
+          <li>Positive attitude and open mind</li>
+
+          <hr />
           <h5 class="card-title">LANGUAGES</h5>
-       
-            <li>English</li>
-            <li>Thai</li>
-     
-          <hr>
+
+          <li>English</li>
+          <li>Thai</li>
+
+          <hr />
           <h5 class="card-title">SOCIAL</h5>
-     
-            <a href="https://www.facebook.com/santichai.yarasit" class="text-decoration-none" target="_blank"><p class="text-muted"><i class="bi bi-facebook"></i> Santichai Yarasit</p></a>
-            <a href="https://www.instagram.com/santichai_pp/" class="text-decoration-none" target="_blank"><p class="text-muted"><i class="bi bi-instagram"></i> santichai_pp</p></a>
-      
+
+          <a
+            href="https://www.facebook.com/santichai.yarasit"
+            class="text-decoration-none"
+            target="_blank"
+            ><p class="text-muted">
+              <i class="bi bi-facebook"></i> Santichai Yarasit
+            </p></a
+          >
+          <a
+            href="https://www.instagram.com/santichai_pp/"
+            class="text-decoration-none"
+            target="_blank"
+            ><p class="text-muted">
+              <i class="bi bi-instagram"></i> santichai_pp
+            </p></a
+          >
         </div>
-  
-        </div>
+      </div>
     </div>
     <div class="col-md-8">
       <div class="card shadow p-3 mb-5 bg-white rounded">
         <div class="card-body">
           <h4 class="card-title">OBJECTIVE</h4>
-          <p class="card-text">To work in a position related to information technology where I can apply my knowledge and skills in android development and web development.</p>
+          <p class="card-text">
+            To work in a position related to information technology where I can
+            apply my knowledge and skills in android development and web
+            development.
+          </p>
         </div>
       </div>
       <div class="card shadow p-3 mb-5 bg-white rounded">
         <div class="card-body">
           <h4 class="card-title">WORK EXPERIENCE</h4>
           <p class="card-text">Web Developer</p>
-          <p class="text-warning"> <i class="bi bi-calendar"> Division of Academic Support at SUT | Aug 2020 - Mar 2021</i></p>
-          <p class="text-secondary"> PHP </p>
-          <hr>
+          <p class="text-warning">
+            <i class="bi bi-calendar">
+              Division of Academic Support at SUT | Aug 2020 - Mar 2021</i
+            >
+          </p>
+          <p class="text-secondary">PHP</p>
+          <hr />
           <p class="card-text">Software Development</p>
-          <p class="text-warning"> <i class="bi bi-calendar"> ME Group Enterprise Co,. Ltd. | July 2021 - Oct 2021 (internship)</i></p>
-          <p class="text-secondary">Angular & NodeJS </p>
-          <hr>
+          <p class="text-warning">
+            <i class="bi bi-calendar">
+              ME Group Enterprise Co,. Ltd. | July 2021 - Oct 2021
+              (internship)</i
+            >
+          </p>
+          <p class="text-secondary">Angular & NodeJS</p>
+          <hr />
           <p class="card-text">Software Development</p>
-          <p class="text-warning"> <i class="bi bi-calendar"> ME Group Enterprise Co,. Ltd. | Oct 2021 - present</i></p>
-          <p class="text-secondary">Angular & NodeJS </p>
+          <p class="text-warning">
+            <i class="bi bi-calendar">
+              ME Group Enterprise Co,. Ltd. | Oct 2021 - present</i
+            >
+          </p>
+          <p class="text-secondary">Angular & NodeJS</p>
         </div>
       </div>
       <div class="card shadow p-3 mb-5 bg-white rounded">
         <div class="card-body">
           <h4 class="card-title">EDUCATION</h4>
           <p class="card-text">Bachelor of Information Science</p>
-          <p class="text-warning"> <i class="bi bi-calendar"> Suranaree University of Technology, Nakhon Ratchasima | 2018 - present</i></p>
-          <p class="text-secondary">Suranaree University of Technology </p>
-          <hr>
+          <p class="text-warning">
+            <i class="bi bi-calendar">
+              Suranaree University of Technology, Nakhon Ratchasima | 2018 -
+              2022</i
+            >
+          </p>
+          <p class="text-secondary">Suranaree University of Technology</p>
+          <hr />
           <p class="card-text">High School Diploma</p>
-          <p class="text-warning"> <i class="bi bi-calendar"> Saint Louis School Chachoengsao, Chachoengsao | 2015 - 2018 </i></p>
+          <p class="text-warning">
+            <i class="bi bi-calendar">
+              Saint Louis School Chachoengsao, Chachoengsao | 2015 - 2018
+            </i>
+          </p>
           <p class="text-secondary">Saint Louis School Chachoengsao</p>
         </div>
       </div>
@@ -81,7 +119,9 @@
         <div class="card-body">
           <h4 class="card-title">EXTRACURRICULAR ACTIVTIES</h4>
           <p class="card-text">Suranaree University of Technology</p>
-          <p class="text-warning"><i class="bi bi-calendar"> AI Image Processing | January 2021 </i></p>
+          <p class="text-warning">
+            <i class="bi bi-calendar"> AI Image Processing | January 2021 </i>
+          </p>
           <p class="text-secondary">Suranaree University of Technology</p>
         </div>
       </div>
@@ -89,21 +129,22 @@
         <div class="card-body">
           <h4 class="card-title">SKILLS</h4>
           <p class="card-text">Computer Skills</p>
-          <p class="text-secondary"> 
-            MySQL, Microsoft Office, Visual Studio Code, Visual Studio, Android Studio, Command-line</p>
-            <p class="card-text">Programing Skills</p>
-            <p class="text-secondary">
-              HTML, CSS, PHP, SQL, C#, C++, Java, JavaScript, Python,
-              Angular , ReactJS, VueJS, NodeJS
-            </p>
-        
+          <p class="text-secondary">
+            MySQL, Microsoft Office, Visual Studio Code, Visual Studio, Android
+            Studio, Command-line
+          </p>
+          <p class="card-text">Programing Skills</p>
+          <p class="text-secondary">
+            HTML, CSS, PHP, SQL, C#, C++, Java, JavaScript, Python, Angular ,
+            React, Vue, NodeJS
+          </p>
         </div>
       </div>
     </div>
   </div>
 </div>
-<br>
-<br>
-<br>
-<br>
+<br />
+<br />
+<br />
+<br />
 <app-footer></app-footer>
