--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+* {
+  font-family: "Bai Jamjuree", sans-serif;
+}
